# Dystopic_Investment_AIgents

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_ingestion  Dockerfile_mage  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: daily_news.yaml  daily_price.yaml  daily_price_insert.yaml
config/: fund_config.yaml
config/base_prompts/: fund_manager_base_prompt.py
dystopic_investment_aigents/agents/: README.md  discussion.py  fund.py  fund_manager_base.py  newsletter_base.py  quant_trader_base.py
dystopic_investment_aigents/agents/base_agents/: agent_base.py  analyst_base.py  fund_manager_base.py  memory_base.py  newsletter_base.py  quant_trader_base.py
dystopic_investment_aigents/agents/base_knowledge/: news_retriever.py
dystopic_investment_aigents/agents/base_prompts/: analyst_base_prompt.py  fund_manager_base_prompt.py  quant_trader_base_prompt.py
dystopic_investment_aigents/agents/evaluation/: llm_judge.py  metrics.py
dystopic_investment_aigents/agents/impl_agents/: analyst_adal.py  fund_manager_adal.py  quant_trader_adal.py
dystopic_investment_aigents/data_ingestion/: README.md  download_yh_news.py  download_yh_ticker_data.py  download_yh_ticker_stats.py
dystopic_investment_aigents/data_ingestion/db/: financial_db.py  postgres_db.py
dystopic_investment_aigents/data_ingestion/downloader/: tiingo_ticker_downloader.py  yahoo_ticker_downloader.py
dystopic_investment_aigents/knowledge_base/: db.py
dystopic_investment_aigents/utils/: db_utils.py  model_client_utils.py  parse_utils.py  portfolio_utils.py  ticker_map.xls  yaml_utils.py
mage/mage_etl/: requirements.txt
mage/mage_etl/data_exporters/: save_to_gcs_partition.py  save_to_gcs_partition_bezinga_news.py  save_to_gcs_partition_product_hunt.py  save_to_gcs_partition_ticker_price.py
mage/mage_etl/data_loaders/: dwn_ticker_price.py  dwn_ticker_price_batch.py  news_kafka_consumer.yaml  product_hunt_loader.py
mage/mage_etl/transformers/: parse_product_hunt.py
mage_data/mage_etl/: mage-ai.db
mage_data/mage_etl/.cache/: block_action_objects_mapping  blocks_to_pipeline_mapping  pipeline_details_mapping
mage_data/mage_etl/.operation_history/: 2024-04-14
mage_etl/: metadata.yaml
mage_etl/data_exporters/: save_to_gcs_partition.py  save_to_gcs_partition_bezinga_news.py  save_to_gcs_partition_product_hunt.py  save_to_gcs_partition_ticker_price.py  save_to_gcs_streaming.yaml
mage_etl/data_loaders/: dwn_news_alpaca.py  dwn_ticker_price.py  dwn_ticker_price_batch.py  insightful_hill.py  product_hunt_loader.py
mage_etl/pipelines/bezinga_news_hourly/: metadata.yaml
mage_etl/pipelines/black_crafter/: metadata.yaml
mage_etl/pipelines/illusory_healer/: metadata.yaml
mage_etl/pipelines/news_kafka_consumer/: metadata.yaml
mage_etl/pipelines/product_hunt_ingestion/: metadata.yaml
mage_etl/pipelines/ticker_price_daily_batch/: metadata.yaml
mage_etl/pipelines/ticker_prices_daily/: metadata.yaml
mage_etl/transformers/: parse_product_hunt.py
makefiles/: application.mk  data.mk  environment.mk  infrastructure.mk
notebooks/: 01_Download_ticker_data.ipynb  02_Socket_news.ipynb  03_Data_transformations.ipynb  04_Product_hunt_api.ipynb  06_weaviate_vector_db.ipynb  07_tiingo_downloader.ipynb  08_supabase_pg_vector_db_langchain.ipynb  09_analyst.ipynb  09_analyst_and_fund_manager.ipynb  10_newsletter_agent.ipynb  11_performance_assesment.ipynb  12_fund.ipynb  ADD_00_daily_volume_available_tickers.ipynb  XX_scrape_salary_data.ipynb  singapore_salaries.csv
notebooks/agents/: 09_analyst_and_fund_manager.ipynb  10_newsletter_agent.ipynb  langsmith.ipynb  prompt_templates.ipynb
notebooks/agents/discussions/: disc_config.yaml  discussions.ipynb
notebooks/agents/evaluation/: llm_judge.ipynb
portfolio_app/: app.py  style.css
portfolio_app/utils/: portfolio_utils.py
src/agents/: agent_base.py  analyst_base.py  fund_manager_base.py  newsletter_base.py  quant_trader_base.py
src/app/: app.py
src/data_ingestion/: configs.py  download_crunchbase_data.py  download_financial_news.py  download_product_hunt.py  download_ticker_data.py  download_tiingo_ticker_data.py  download_yh_ticker_data.py  download_yh_ticker_stats.py  transform_basic_indicators.py
src/data_ingestion/db/: postgres_db.py
src/data_ingestion/downloader/: tiingo_downloader.ipynb  tiingo_ticker_downloader.py  yahoo_ticker_downloader.py
src/data_ingestion/kafka/: base_consumer.py  base_producer.py  create_topic.py
src/utils/: portfolio_utils.py
(+34 files in other folders)
