[tool.poetry]
name = "dystopic-investment-aigents"
version = "0.1.0"
description = ""
authors = ["Carlos Vecina <carlosvecinatebar@gmail.com>"]
readme = "README.md"
packages = [{ include = "dystopic_investment_aigents" }]

[tool.poetry.dependencies]
python = "^3.11"
vectorbt = "^0.26.0"
python-dotenv = "^1.0.1"
nbformat = "^5.10.3"
pydantic = "^2.7.0"
rel = "^0.4.9.9"
psycopg2 = "^2.9.9"
vecs = "^0.4.3"
pyarrow = "^17.0.0"
supabase = "^2.5.3"
ipykernel = "^6.29.4"
# scrape
beautifulsoup4 = "*"
pandas = "*"
selenium = "*"
webdriver-manager = "*"
undetected-chromedriver = "*"
#agents
langchain-openai = "^0.1.3"
langchainhub = "^0.1.15"
lightrag = "^0.1.0b6"
#app
streamlit = "^1.37.0"
yfinance = "^0.2.41"

[tool.poetry.group.dev.dependencies]
#websockets = "10"
kafka-python = "^2.0.2"
weaviate-client = "^4.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
